--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-yfinance
-plotly
-pandas
-numpy
-plotly
-matplotlib
-scipy
+yfinance==0.1.70
+pandas==1.3.5
+numpy==1.22.0
+plotly==5.9.0
+matplotlib==3.5.1
+scipy==1.8.0
+streamlit==1.18.1
